<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:contentDescription="@string/description_edit_text"
            android:id="@+id/tagEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tag_edit_text_hint"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="1"
        android:columnCount="2"
        android:layout_marginLeft="2sp">
        <TextView
            android:contentDescription="@string/description_label_tag"
            android:id="@+id/tagLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag"
            android:layout_row="0"
            android:layout_column="0"/>

        <TextView
            android:contentDescription="@string/description_label_tag"
            android:id="@+id/tagTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0" />
    </GridLayout>

    <EditText
        android:contentDescription="@string/description_content_tag"
        android:hint="@string/hint_content"
        android:id="@+id/tagContentEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:inputType="textMultiLine" />

</LinearLayout>